# rescue-log

./: .gitignore  index.ts
rescue-log/: Cargo.toml
rescue-log/src/: main.rs
