[package]
name = "rescue-log"
version = "0.1.0"
authors = ["iemong"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
futures = "0.3.13"
reqwest = { version = "0.11.2", features = ["blocking"] }
