[package]
name = "rescue-log"
version = "0.1.0"
authors = ["iemong"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1.0.124", features = ["derive"] }
tokio = { version = "1.3.0", features=["full"]}
